Update: Registered 131/270 shops and Round 1211 emergency data update with scraper fix

--- a/index.html
+++ b/index.html
@@ -2549,6 +2549,96 @@
             { name: "나나 복권판매소", addr: "경남 양산시 상북면 상북중앙로 319", panoid: 1204563526, pov: { pan: 275.4, tilt: 0.6, zoom: 3 }, customMessage: "석계리 272-18에서 이전된 1등 5회 명당입니다. (상북중앙로 319 위치)" },
             { name: "나래복권", addr: "충북 충주시 충원대로 952", panoid: 1163813266, pov: { pan: 104.78, tilt: 1.24, zoom: 2 }, isClosed: true, customMessage: "현재 폐점 또는 로또 판매 중단 상태입니다. (과거 1등 4회 명당)" },
             { name: "넝쿨째(블루25 중앙점)", addr: "경남 창원시 마산합포구 중앙동2가 2-280", panoid: 1204644268, pov: { pan: 309.7, tilt: -9.2, zoom: 1 }, customMessage: "788회차에서 1등 3명이 동시에 배출된 진기록의 명당입니다." },
+            { name: "노다지로또", addr: "인천 서구 완정로 179 검단제이원빌딩 108호", panoid: 1199025335, pov: { pan: 205.74, tilt: -0.60, zoom: -3 } },
+            { name: "노다지복권방", addr: "부산 북구 덕천로 287", panoid: 1202267577, pov: { pan: 19.9, tilt: 6.4, zoom: 2 } },
+            { name: "노다지복권방", addr: "인천 미추홀구 학익동 264-6 외7필지 125호", panoid: 1172510557, pov: { pan: 107.12, tilt: 11.54, zoom: -3 } },
+            { name: "노다지복권방", addr: "서울 종로구 창신동 302-5", panoid: 1197814475, pov: { pan: 347.36, tilt: 4.46, zoom: -2 } },
+            { name: "노다지복권방", addr: "경기 오산시 오산동 394-1", panoid: 1174611564, pov: { pan: 162.70, tilt: 10.85, zoom: -3 } },
+            { name: "노다지복권방서정지점", addr: "경기 평택시 서정동 335-27", panoid: 1198305791, pov: { pan: 277.1, tilt: 2.9, zoom: 1 } },
+            { name: "다드림복권", addr: "경기 김포시 월하로 930 1층 101호", panoid: 1203372471, pov: { pan: 231.20, tilt: 8.58, zoom: -3 } },
+            { name: "당하복권명당", addr: "인천 서구 서곶로 788", panoid: 1199615169, pov: { pan: 68.28, tilt: 1.45, zoom: -3 } },
+            { name: "대박", addr: "경기 구리시 안골로103번길 46", panoid: 1203302213, pov: { pan: 342.05, tilt: 9.61, zoom: -3 } },
+            { name: "대박로또판매점", addr: "경기 수원시 장안구 영화로 2129-1 인동", panoid: 1199673044, pov: { pan: 243.99, tilt: 0.39, zoom: -3 } },
+            { name: "대박마트", addr: "충남 천안시 동남구 봉명동 494 봉명청솔아파트상가 103호", panoid: 1194827511, pov: { pan: 284.9, tilt: -5.5, zoom: 0 } },
+            { name: "대박명당", addr: "경기 양주시 옥정동로5길 6", panoid: 1204022501, pov: { pan: 342.4, tilt: 3.8, zoom: 1 } },
+            { name: "대박의터", addr: "강원 춘천시 영서로 1786", panoid: 1195798040, pov: { pan: 63.49, tilt: 1.37, zoom: -1 } },
+            { name: "대박찬스", addr: "경기 성남시 중원구 산성대로 4460", panoid: 1198939639, pov: { pan: 303.94, tilt: -2.44, zoom: 1 } },
+            { name: "대박찬스", addr: "광주 북구 오치동 776-7", panoid: 1200654276, pov: { pan: 84.34, tilt: -1.70, zoom: -3 } },
+            { name: "대박행진복권랜드", addr: "경기 파주시 금촌동 989-1 금촌프라자 107호", panoid: 1045548538, pov: { pan: 166.7, tilt: -1.1, zoom: 0 } },
+            { name: "대야지복권", addr: "광주 남구 주월동 961-24", panoid: 1200569355, pov: { pan: 336.8, tilt: -0.3, zoom: 1 } },
+            { name: "대영당안경원", addr: "부산 동래구 수안동 232", panoid: 1202730682, pov: { pan: 274.80, tilt: -0.10, zoom: -3 } },
+            { name: "대운복권", addr: "경기 성남시 중원구 성남동 4159", panoid: 1199005732, pov: { pan: 297.9, tilt: -2.2, zoom: 3 } },
+            { name: "대흥당", addr: "전북 정읍시 관통로 102", panoid: 1183542559, pov: { pan: 307.0, tilt: 0.9, zoom: 0 } },
+            { name: "도깨비", addr: "경기 하남시 서하남로 136", panoid: 1173958844, pov: { pan: 178.97, tilt: 7.88, zoom: -3 } },
+            { name: "도소매복권방", addr: "전남 광양시 광영동 759-4", panoid: 1205328614, pov: { pan: 108.57, tilt: 5.52, zoom: -3 } },
+            { name: "동남슈퍼", addr: "전북 부안군 부안읍 동중리 130-5", panoid: 1182567764, pov: { pan: 337.8, tilt: 0.8, zoom: 0 } },
+            { name: "동원슈퍼", addr: "광주 남구 월산5동 1053-22", panoid: 1200403334, pov: { pan: 228.78, tilt: 5.68, zoom: -3 } },
+            { name: "동일통신", addr: "부산 해운대구 반여1동 1361-2", panoid: 1202252207, pov: { pan: 96.27, tilt: 11.77, zoom: -3 } },
+            { name: "돼지복권명당", addr: "부산 기장군 철마면 임기리 365-1", panoid: 1201909627, pov: { pan: 325.76, tilt: 11.68, zoom: -3 } },
+            { name: "둘리복권방", addr: "경기 시흥시 중심상가2길 12-6 한강1차101호", panoid: 1176042805, pov: { pan: 297.91, tilt: -0.61, zoom: -3 } },
+            { name: "드림메드", addr: "경기 안산시 상록구 월피로 56 101호", panoid: 1204153598, pov: { pan: 120.5, tilt: -2.8, zoom: 0 } },
+            { name: "따봉복권방", addr: "인천 부평구 부평4동 889-5", panoid: 1199330283, pov: { pan: 269.89, tilt: 4.38, zoom: -3 } },
+            { name: "떴다GO 1등", addr: "경기 화성시 동탄반석로 172 1층 138호(동탄 파라곤점)", panoid: 1198012743, pov: { pan: 101.0, tilt: -4.0, zoom: 0 } },
+            { name: "또와식품", addr: "서울 강서구 염창동 264-8", panoid: 1198500709, pov: { pan: 223.70, tilt: 0.06, zoom: -3 } },
+            { name: "럭키복권방", addr: "서울 도봉구 창동 134-36 우림빌딩106", panoid: 1197759119, pov: { pan: 7.9, tilt: 3.7, zoom: 0 } },
+            { name: "로또", addr: "충남 홍성군 홍성읍 오관리 311-5", panoid: 1161022501, pov: { pan: 200.38, tilt: 6.42, zoom: -1 } },
+            { name: "로또 명당 가판점", addr: "서울 금천구 남부순환로 1390", panoid: 1198477792, pov: { pan: 154.59, tilt: -1.43, zoom: -3 } },
+            { name: "로또25시", addr: "경기 수원시 권선구 권선동 1295-3 104호", panoid: 1199507269, pov: { pan: 91.76, tilt: 7.74, zoom: -3 } },
+            { name: "로또로복권", addr: "전북 전주시 완산구 평화동2가 4729", panoid: 1172287937, pov: { pan: 293.02, tilt: -1.94, zoom: -3 } },
+            { name: "로또매점", addr: "충남 당진시 송산면 유곡리 876-2", panoid: 1172172781, pov: { pan: 276.95, tilt: 4.01, zoom: 0 } },
+            { name: "로또명당", addr: "경기 시흥시 신현로 21-1 101호", panoid: 1175428410, pov: { pan: 141.2, tilt: -1.0, zoom: 1 } },
+            { name: "로또명당", addr: "인천 미추홀구 문학동 355-12 1층", panoid: 1200600347, pov: { pan: 297.51, tilt: 5.61, zoom: -3 } },
+            { name: "로또복권", addr: "경북 김천시 신음동 462-24", panoid: 1165059457, pov: { pan: 21.12, tilt: -1.34, zoom: -3 } },
+            { name: "로또복권", addr: "경기 화성시 송산면 사강리 694-4", panoid: 1196583182, pov: { pan: 248.08, tilt: 0.32, zoom: -3 } },
+            { name: "로또복권 하대점", addr: "경남 진주시 하대동 188", panoid: 1193106643, pov: { pan: 82.61, tilt: 1.05, zoom: -3 } },
+            { name: "로또복권방", addr: "경기 가평군 가평읍 읍내리 448-3", panoid: 1175611447, pov: { pan: 14.37, tilt: 5.66, zoom: -3 } },
+            { name: "로또복권장항점", addr: "충남 서천군 장항읍 창선리 632-2", isClosed: true, customMessage: "현재 폐업 상태로 장항 지역의 다른 명당(1등명당 등)을 이용해 주세요." },
+            { name: "로또복권짱", addr: "경기 용인시 처인구 남사읍 어비리 582-3", panoid: 1198953409, pov: { pan: 54.76, tilt: -1.02, zoom: -2 } },
+            { name: "로또통신", addr: "경남 김해시 외동 1251-1 104호 (함박로101번길 22)", panoid: 1194388308, pov: { pan: 83.23, tilt: -3.87, zoom: -2 } },
+            { name: "로또판매점", addr: "경기 포천시 신북면 가채리 23-2", panoid: 1176226525, pov: { pan: 97.77, tilt: 0.82, zoom: -2 } },
+            { name: "로또판매점", addr: "충북 음성군 대소면 오산리 533-1", panoid: 1165303745, pov: { pan: 110.98, tilt: 4.60, zoom: -3 } },
+            { name: "로또행운마트", addr: "경남 김해시 삼문동 177번지 (능동로 157)", panoid: 1194480714, pov: { pan: 168.60, tilt: 1.76, zoom: -1 } },
+            { name: "롯데무역", addr: "부산 영도구 남항동1가 197-1번지 (꿈나무길 197)", panoid: 1202691794, pov: { pan: 108.98, tilt: 5.95, zoom: -3 } },
+            { name: "마이마트", addr: "인천 서구 심곡동 302 한국상가 제1층 101호", panoid: 1199391535, pov: { pan: 182.2, tilt: -3.9, zoom: 0 }, customMessage: "기존 '이마트(인천 심곡)' 명칭으로 알려진 1등 4회 대박 명당입니다." },
+            { name: "메가마트", addr: "경기 시흥시 정왕대로 64 메가쇼핑몰 1층 123호", panoid: 1176237881, pov: { pan: 20.5, tilt: -1.3, zoom: 1 } },
+            { name: "명성복권방", addr: "경기 화성시 진안동 525-58", panoid: 1198316660, pov: { pan: 190.1, tilt: -6.0, zoom: 1 } },
+            { name: "명당마트", addr: "서울 강서구 양천로 91", panoid: 1198194653, pov: { pan: 58.67, tilt: 0.41, zoom: -3 } },
+            { name: "명신사", addr: "서울 마포구 월드컵로 97", panoid: 1197543347, pov: { pan: 225.25, tilt: 6.55, zoom: -3 } },
+            { name: "명진슈퍼", addr: "경기 의왕시 고천동 295-26", panoid: 1174117026, pov: { pan: 262.24, tilt: 5.16, zoom: -3 } },
+            { name: "매물도복권점", addr: "경남 통영시 통영해안로 225-1 (서호동 177-336)", panoid: 1204407783, pov: { pan: 347.4, tilt: 5.4, zoom: 4 }, customMessage: "기존 '바다로또방(1등 3회)'의 당첨 기운을 이어받아 통합 운영 중인 명당입니다." },
+            { name: "버스매표소", addr: "인천 부평구 부평대로 3 (부평동 549-39)", panoid: 1199209059, pov: { pan: 329.47, tilt: 1.58, zoom: -3 }, customMessage: "부평역 광장 가판대로 역사적인 당첨 기록을 보유한 명당입니다." },
+            { name: "버스표판매소", addr: "경기 고양시 덕양구 화신로 76 샘터마을1단지 가판", panoid: 1203599815, pov: { pan: 212.0, tilt: 4.9, zoom: 0 }, customMessage: "행신동 샘터마을1단지 앞 가판대 명당입니다." },
+            { name: "베스토아(용전2호)", addr: "대전 동구 동서대로 1689 복합터미널서관1층59호 (용전동 63-3)", panoid: 1201601961, pov: { pan: 248.2, tilt: 1.6, zoom: 0 }, customMessage: "동행복권 기록상 도로명/지번 주소 분산으로 인해 3+4회로 나뉘어 있던 총 7회 당첨의 전설적인 명당입니다." },
+            { name: "보람복권방", addr: "울산 남구 화합로194번길 18-1 (삼산동 1567-6 우리들마트 내)", panoid: 1201998535, pov: { pan: 190.2, tilt: 0.9, zoom: 0 }, customMessage: "도로명/지번 주소 분산으로 4+4회로 나뉘어 있던 총 8회 당첨의 엄청난 명당입니다." },
+            { name: "보경식품", addr: "서울 강북구 미아동 207-2", panoid: 1197862462, pov: { pan: 249.90, tilt: 1.60, zoom: -1 } },
+            { name: "복권", addr: "경기 의정부시 태평로 75", panoid: 1174093159, pov: { pan: 277.0, tilt: 0.0, zoom: 0 } },
+            { name: "복권나라", addr: "경북 포항시 북구 죽도동 140-9 (죽도로 9)", panoid: 1187494212, pov: { pan: 348.69, tilt: 12.87, zoom: -3 }, customMessage: "포항 죽도동의 명실상부한 1등 3회 배출 명당입니다." },
+            { name: "복권나라", addr: "강원 원주시 평원로 23 (학성동 23)", panoid: 1196398296, pov: { pan: 278.64, tilt: 8.80, zoom: -3 }, customMessage: "원주 학성동에서 총 6회의 1등 당첨을 배출한 전설적인 곳입니다." },
+            { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 306.63, tilt: 3.87, zoom: 1 }, customMessage: "증평읍 중동리에서 1등 5회를 배출하며 꾸준히 사랑받는 명당입니다." },
+            { name: "복권나라", addr: "서울 성동구 용답중앙15길 12-1 (용답동 14-30)", panoid: 1198738844, pov: { pan: 109.2, tilt: 7.2, zoom: 0 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
+            { name: "복권나라", addr: "전남 여수시 중앙로 62 (교동 448-2)", panoid: 1205476848, pov: { pan: 179.20, tilt: -0.44, zoom: 1 }, customMessage: "여수 중앙로의 터줏대감으로 지번/도로명 분산 기록을 포함하여 총 5회 1등이 당첨된 명당입니다." },
+            { name: "복권나라", addr: "인천 서구 석남동 586-2", panoid: 1200085676, pov: { pan: 180.1, tilt: 2.3, zoom: 0 } },
+            { name: "복권명당", addr: "경기 안성시 공도읍 승두길 62 (승두리 60-129)", panoid: 1176200480, pov: { pan: 171.58, tilt: 1.98, zoom: -1 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 명당입니다." },
+            { name: "복권명당", addr: "경북 경산시 경안로 214 (중방동 436-11)", panoid: 1187314576, pov: { pan: 30.42, tilt: 4.74, zoom: 2 } },
+            { name: "복권명당", addr: "대전 중구 목중로 47 (중촌동 21-18)", panoid: 1201428533, pov: { pan: 216.8, tilt: 0.7, zoom: 0 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 명당입니다." },
+            { name: "복권방", addr: "경기 수원시 팔달구 인계로 213 (인계동 1037-2)", panoid: 1199811682, pov: { pan: 176.89, tilt: 1.16, zoom: -2 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 인계동 명당입니다." },
+            { name: "복권방", addr: "서울 구로구 구로동 409-80 (구로동로35길 6)", panoid: 1198456741, pov: { pan: 299.0, tilt: 3.0, zoom: 3 }, isClosed: true, customMessage: "과거 1등을 3회 배출했으나 현재는 폐점된 매장입니다." },
+            { name: "복권방", addr: "경기 하남시 신장로 122 (신장동 427-169)", panoid: 1173490651, pov: { pan: 27.4, tilt: -6.5, zoom: 0 }, customMessage: "하남 신장동의 대표 명당으로 지번/도로명 분산 기록을 포함하여 총 4회 1등이 배출되었습니다." },
+            { name: "복권방", addr: "강원 원주시 관설동 1702-1", panoid: 1195742103, pov: { pan: 136.5, tilt: 1.6, zoom: 0 } },
+            { name: "복권백화점", addr: "경기 여주시 여흥로 115 (홍문동 207-9)", panoid: 1174873101, pov: { pan: 119.17, tilt: 2.34, zoom: -1 } },
+            { name: "복권사랑", addr: "경기 양주시 평화로 1421 (덕계동 462-2)", panoid: 1204107039, pov: { pan: 112.71, tilt: 1.11, zoom: 1 } },
+            { name: "복권전문점", addr: "대전 유성구 계룡로 132번길 10 (봉명동 568-4)", panoid: 1201068426, pov: { pan: 205.90, tilt: 4.45, zoom: -3 } },
+            { name: "복권천국", addr: "부산 서구 구덕로 207-1 (부민동2가 10-8)", panoid: 1202160948, pov: { pan: 215.57, tilt: 6.67, zoom: 0 } },
+            { name: "복권천국방", addr: "서울 마포구 어울마당로 125 (서교동 480-1)", panoid: 1197902493, pov: { pan: 172.06, tilt: 8.06, zoom: 0 } },
+            { name: "복돼지복권방", addr: "전북 익산시 선화로1길 4 (배산시티프라자 107호)", panoid: 1179805782, pov: { pan: 16.3, tilt: 2.2, zoom: 5 }, customMessage: "지번/도로명 및 중복 주소 기록을 통합하여 총 4회 1등을 배출한 익산 명당입니다." },
+            { name: "부강 돈벼락", addr: "경남 양산시 물금로 41 (물금리 800-5, 양우내안애5차 상가 108호)", panoid: 1204485832, pov: { pan: 44.5, tilt: -1.0, zoom: 3 }, customMessage: "양산 물금읍의 숨은 명당으로 로또 1등 3회 배출 기록을 보유하고 있습니다." },
+            { name: "부자랑", addr: "서울 성동구 둘레15길 23", panoid: 1198725466, pov: { pan: 247.57, tilt: 5.20, zoom: -3 } },
+            { name: "북부슈퍼", addr: "경기 의정부시 가능로125번길 22", panoid: 1174088094, pov: { pan: 46.90, tilt: 10.25, zoom: -3 } },
+            { name: "돈벼락", addr: "경기 부천시 범안로 220 제근린생활시설2동 1층 103호", panoid: 1203479413, pov: { pan: 335.2, tilt: 4.8, zoom: 0 } },
+            { name: "돈벼락맞는곳", addr: "부산 사상구 낙동대로 910 마트월드 A-160호", panoid: 1202359872, pov: { pan: 90.17, tilt: 4.12, zoom: 0 } },
+            { name: "돈벼락맞는곳", addr: "대전 서구 복수남로 16", panoid: 1200853943, pov: { pan: 42.10, tilt: 1.51, zoom: -3 } },
+            { name: "돈벼락맞는곳", addr: "경남 김해시 한림면 신천리 980-7", panoid: 1194446892, pov: { pan: 206.04, tilt: 4.71, zoom: 0 } },
+            { name: "돈벼락복권방", addr: "대구 북구 동변동 686", panoid: 1201176065, pov: { pan: 79.5, tilt: 0.5, zoom: 0 } },
             { name: "NBA(엔비에이)", addr: "운서동 2803-1 128호", panoId: 1199042496, pov: { pan: 185.43, tilt: -3.07, zoom: 2 } },
             { name: "헬로마트", addr: "서울 도봉구 도봉2동 89-148", panoId: 1197897753, pov: { pan: 137.1, tilt: 6.5, zoom: 2 } },
             { name: "북문복권방", addr: "정조로 927-1", panoId: 1199757912, pov: { pan: 147.1, tilt: 4.8, zoom: 2 } },
