Emergency Fix: Push pending changes for openRoadview variable definitions

--- a/index.html
+++ b/index.html
@@ -4797,6 +4797,10 @@
         function openRoadview(arg1, arg2, arg3, arg4, arg5, arg6) {
             const roadviewContainer = document.getElementById('roadview-modal');
             const roadviewEl = document.getElementById('roadview');
+            const imgContainer = document.getElementById('roadviewImageContainer');
+            const helpText = document.getElementById('roadviewHelpText');
+            const copyBtn = document.getElementById('roadviewCopyBtn');
+            const naviBtn = document.getElementById('roadviewNaviBtn');
 
             let lat, lng, shopName, address, actionType, actionData, shop;
 
