Register Batch 50 (3 shops) and Deploy all accumulated updates

--- a/index.html
+++ b/index.html
@@ -2616,6 +2616,7 @@
             { name: "가판점", addr: "서울 서초구 서초동(서초3동) 1602-2 가판", isClosed: true, customMessage: "현재 폐점된 가판대입니다." },
             { name: "가로가판대", addr: "서울 관악구 신림동(조원동) 1643-6" },
             { name: "가로판매대", addr: "서울 강동구 올림픽로 648 천호역 3번 출구 앞(가판점)" },
+            { name: "가로판매점", addr: "서울 용산구 원효로 179", panoid: 1197440869, pov: { pan: 297.07, tilt: -5.58, zoom: -2 }, customMessage: "신한은행(ATM) 옆 가판점입니다. (주차부스 바로 옆 확인)" },
             { name: "가로판매대", addr: "서울 종로구 교남동", panoid: 1201585664, pov: { pan: 87.39, tilt: 13.86, zoom: -2 } },
             { name: "가자복권천국", addr: "전남 목포시 상동", panoid: 1192597069, pov: { pan: 352.61, tilt: -0.23, zoom: 3 } },
             { name: "가든호텔정문옆가판", addr: "서울 마포구 도화동 169-1", panoid: 1197820704, pov: { pan: 109.3, tilt: -0.9, zoom: 0 } },
@@ -2623,7 +2624,6 @@
             { name: "경동G-PLUS할인마트", addr: "부산 해운대구 좌동", panoid: 1202480351, pov: { pan: 217.60, tilt: 6.09, zoom: 3 } },
             { name: "경성식품", addr: "서울 동대문구 휘경1동", panoid: 1198205251, pov: { pan: 15.21, tilt: 3.58, zoom: 0 } },
             { name: "공원슈퍼", addr: "경기 수원시 장안구", panoid: 1199575474, pov: { pan: 327.50, tilt: 4.59, zoom: -2 } },
-            { name: "광성슈퍼", addr: "경기 이천시 단월동", panoid: 1175073789, pov: { pan: 233.36, tilt: 4.00, zoom: -3 } },
             { name: "교하로또판매점", addr: "경기 파주시 파주로", panoid: 1203181718, pov: { pan: 275.18, tilt: -2.11, zoom: -3 } },
             { name: "구산복권방", addr: "경남 김해시 구산동", panoid: 1193912431, pov: { pan: 241.41, tilt: 0.35, zoom: 0 } },
             { name: "구포라인점", addr: "부산 북구 구포동", panoid: 1202526440, pov: { pan: 256.93, tilt: -2.56, zoom: 0 } },
@@ -2685,9 +2685,19 @@
             { name: "로또판매점", addr: "경기 포천시 신북면 가채리 23-2", panoid: 1176226525, pov: { pan: 97.77, tilt: 0.82, zoom: -2 } },
             { name: "로또판매점", addr: "충북 음성군 대소면 오산리 533-1", panoid: 1165303745, pov: { pan: 110.98, tilt: 4.60, zoom: -3 } },
             { name: "로또행운마트", addr: "경남 김해시 삼문동 177번지 (능동로 157)", panoid: 1194480714, pov: { pan: 168.60, tilt: 1.76, zoom: -1 } },
+            { name: "장미슈퍼", addr: "충남 부여군 계백로 265", panoid: 1178842351, pov: { pan: 265.99, tilt: 9.55, zoom: -3 } },
+            { name: "까치복권방", addr: "경기 시흥시 중심상가로 326", panoid: 1176040884, pov: { pan: 216.52, tilt: -1.90, zoom: -3 } },
+            { name: "로또복권", addr: "경기 평택시 원평로 55", panoid: 1197645349, pov: { pan: 221.40, tilt: 6.81, zoom: -2 } },
+            { name: "복권나라", addr: "충북 청주시 상당구 상당로 9", panoid: 1169915133, pov: { pan: 266.59, tilt: 6.92, zoom: 2 } },
+            { name: "세계로생활가전", addr: "서울 동작구 보라매로 104", panoid: 1197780011, pov: { pan: 92.63, tilt: 3.58, zoom: 0 } },
+            { name: "도깨비방망이", addr: "전남 완도군 장보고대로 220", panoid: 1188939916, pov: { pan: 209.79, tilt: -1.13, zoom: 2 } },
+            { name: "현대사", addr: "경기 성남시 분당구 미금일로 77", panoid: 1198797713, pov: { pan: 178.56, tilt: 1.66, zoom: 2 } },
+            { name: "가로판매점", addr: "서울 서대문구 신촌로 103", panoid: 1198907641, pov: { pan: 114.23, tilt: -0.21, zoom: 0 } },
+            { name: "알리바이금당점", addr: "전남 순천시 대석길 44", panoid: 1205278170, pov: { pan: 354.56, tilt: 10.79, zoom: 0 } },
             { name: "롯데무역", addr: "부산 영도구 남항동1가 197-1번지 (꿈나무길 197)", panoid: 1202691794, pov: { pan: 108.98, tilt: 5.95, zoom: -3 } },
             { name: "마이마트", addr: "인천 서구 심곡동 302 한국상가 제1층 101호", panoid: 1199391535, pov: { pan: 182.2, tilt: -3.9, zoom: 0 }, customMessage: "기존 '이마트(인천 심곡)' 명칭으로 알려진 1등 4회 대박 명당입니다." },
             { name: "메가마트", addr: "경기 시흥시 정왕대로 64 메가쇼핑몰 1층 123호", panoid: 1176237881, pov: { pan: 20.5, tilt: -1.3, zoom: 1 } },
+            { name: "광성슈퍼", addr: "경기 이천시 단월로", panoid: 1175073795, pov: { pan: 281.59, tilt: 0.26, zoom: -3 } },
             { name: "명성복권방", addr: "경기 화성시 진안동 525-58", panoid: 1198316660, pov: { pan: 190.1, tilt: -6.0, zoom: 1 } },
             { name: "명당마트", addr: "서울 강서구 양천로 91", panoid: 1198194653, pov: { pan: 58.67, tilt: 0.41, zoom: -3 } },
             { name: "명신사", addr: "서울 마포구 월드컵로 97", panoid: 1197543347, pov: { pan: 225.25, tilt: 6.55, zoom: -3 } },
